syntax = "proto3";

import "google/protobuf/timestamp.proto";

// Post Service
service PostService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse) {}
  rpc GetPost(PostRequest) returns (PostResponse) {}
  rpc GetPosts(GetPostsRequest) returns (stream Post) {}
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse) {}
  rpc DeletePost(PostRequest) returns (DeletePostResponse) {}
}

message GetPostsRequest {
  int64 page = 1;
  int64 limit = 2;
}

message UpdatePostRequest {
  string id = 1;
  optional string title = 2;
  optional string content = 3;
  optional string category = 4;
  optional string image = 5;
  optional bool published = 6;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string category = 3;
  string image = 4;
  bool published = 5;
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string image = 5;
  bool published = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message PostResponse { Post post = 1; }

message PostRequest { string id = 1; }

message DeletePostResponse { bool success = 1; }